# Final-project

./: .gitignore  README.md  requirements.txt
Classifier2D_5cls/: run_deploy.sh  run_test.sh  run_test_125.sh  run_train.sh  run_train_125.sh  run_train_125_new.sh
Classifier2D_5cls/dataset/: __init__.py  dataloader.py  dataloader_5cls.py  dataloader_5cls_rcnn.py  dataloader_new.py
Classifier2D_5cls/loss/: __init__.py  multi_loss.py
Classifier2D_5cls/models/: __init__.py  resnet18.py  resnet18_2stream.py  resnet18_rnn.py  resnet18_rnn_2stream.py
Classifier2D_5cls/postprocess/: convert_2d_result.py
Classifier2D_5cls/scripts/: get_mask_instance.py
Classifier2D_5cls/tools/: deploy.py  test.py  train.py
Classifier2D_5cls/utils/: __init__.py  lr_scheduler.py  opts.py  postprocess.py  util.py
Classifier2D_5cls/visualization/: rec_img.py
Classifier3D/: run.sh  run_resnet.sh  run_swinunetr.sh  run_test.sh  run_test_resnet.sh  run_test_swinunetr.sh
Classifier3D/common/: file_utils.py
Classifier3D/dataset/: __init__.py  dataloader.py  dataloader_single.py
Classifier3D/loss/: __init__.py  multi_loss.py
Classifier3D/models/: SwinUNETR_3d.py  UNETR_3d.py  __init__.py  densnet.py  resnet18_3d.py
Classifier3D/tools/: test.py  train.py  train_single.py
Classifier3D/utils/: metrics.py  (+2 more)
DataPre/: 1.dcm2nii.py  2.generate_mask.py  3.crop_image_with_mask.py
Deploy/: deploy.py  load_pt.py
Eval/: WeightedLogLoss.py  eval.py
FinalProject_C/: CMakeLists.txt  test.cpp
FinalProject_C/inc/: itkFunc.h  torchFunc.h
FinalProject_C/src/: itkFunc.cpp  torchFunc.cpp
(+5 files in other folders)
